# Linux_lab08

./: .gitmodules  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  LICENSE  README.md
.github/workflows/: github-actions.yml  github-actions1.yml
_CPack_Packages/Linux/RPM/: rpmbuildprint-devel.err  rpmbuildprint-devel.out
_CPack_Packages/Linux/RPM/RPMS/: bank_lib-1.14.0-Linux.rpm
_CPack_Packages/Linux/RPM/SPECS/: print-devel.spec
_build/: CMakeCache.txt
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
solver_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib/formatter_lib/: Makefile  cmake_install.cmake
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
